fix the alignment issue

--- a/styles/alignment-fixes.css
+++ b/styles/alignment-fixes.css
@@ -108,6 +108,8 @@
 .search-input-wrapper {
   flex: 1;
   position: relative;
+  width: 30vw;
+  justify-content: center;
 }
 
 .search-input {
